--- a/.github/workflows/merge-request.yaml
+++ b/.github/workflows/merge-request.yaml
@@ -1,4 +1,4 @@
-name: Nightscout Display Merge Request
+name: Merge Request
 
 on:
   push:
@@ -10,7 +10,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  merge-request:
 
     runs-on: ubuntu-latest
 
@@ -27,6 +27,14 @@ jobs:
     - name: Install dependencies with uv
       run: uv sync
 
+    - name: Lint with ruff
+      run: uv run ruff check
+
+    - name: Format with ruff
+      run: uv run ruff format --check
+
+    - name: Typecheck with mypy
+      run: uv run mypy .
+
     - name: Test with pytest
-      run: |
-        uv run pytest
+      run: uv run pytest
